mongo-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: bookstore
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      name: db
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db-data
              mountPath: /data/db
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: mongo-pvc
      restartPolicy: Always
  serviceName: mongo-service
