mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: bookstore
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: db
  clusterIP: None
